# nat-agent-lab

./: .env.example  .gitignore  LICENSE  README.md  ask  setup.sh
docs/: GUIDE.md
gaia_tools/: ask.py  gaia_run.sh  gaia_run_all.sh  gaia_submit.py  prep_gaia_data.py  pyproject.toml  start_services.sh
gaia_tools/src/gaia_tools/: register.py
multi-agent/: gaia_agent_multi.yml
single-agent/: gaia_agent.yml
ultrafast-agent/: gaia_agent_ultrafast.yml
ultrafast-nogpu-agent/: gaia_agent_ultrafast_nogpu.yml
